# BinactyAndroid

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  link-assets-manifest.json  local.properties  settings.gradle
app/: AndroidManifest.xml  _BUCK  build.gradle  google-services.json  proguard-project.txt
app/libs/: PlayerIO.aar
app/res/drawable/: dialog_background.xml  light_ripple_background.xml
app/res/layout/: dialog_input_layout.xml  dialog_layout.xml  dialog_setup_nick.xml  gameplay_parent.xml
app/res/raw/: lobby_theme.m4a
app/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/res/values-ru/: strings.xml
app/src/debug/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  platformer.cpp
assets/: standard_gamemode.json  textures.json
assets/components/: skin.atlas  skin.json  uiskin.json
assets/data/: blocks.json
assets/data/maps/: test_01.json  test_02.json  test_03.json  test_04.json  test_06.json
assets/etc/: controlsLayout.json  loadFiles.json
assets/font/: roboto-medium.fnt
assets/maps/: test.json
assets/packs/: defaultList.json
assets/packs/bb/: manifest.json
assets/packs/core/: blocks.json  manifest.json
assets/packs/fnaf/: blocks.json  gamemode.java  gamemode.js  gamemode.json  gamemodes.json  manifest.json
assets/packs/official/: manifest.json
assets/world/: blocks.json  gamemodes.json  maps.json
assets/world/gamemodes/: fnafGamemode.json
assets/world/maps/: lobby.json  test_01.json  (+5 more)
core/: build.gradle
desktop/: build.gradle.kts
game/: build.gradle.kts
(+729 files in other folders)
